feat: random nodes

--- a/BOJ1005_ACM_Craft/Front/index.html
+++ b/BOJ1005_ACM_Craft/Front/index.html
@@ -12,7 +12,7 @@
         <div class="frame"></div>
         <div class="btns">
             <button class="output">출력</button>
-            <button class="output">기타</button>
+            <button class="input">랜덤</button>
         </div>
     </div>
     <script src="ACM_Craft.js"></script>
