feat: solution js upload

--- a/BOJ1005_ACM_Craft/Front/index.html
+++ b/BOJ1005_ACM_Craft/Front/index.html
@@ -15,6 +15,6 @@
             <button class="input">랜덤</button>
         </div>
     </div>
-    <script src="ACM_Craft.js"></script>
+    <script src="ACM_Craft.js" type="module"></script>
 </body>
 </html>
